--- a/package.json
+++ b/package.json
@@ -18,7 +18,7 @@
   },
   "devDependencies": {
     "nodemon": "^2.0.2",
-    "constantinople": "^3.0.2",
+    "constantinople": "~3.0.2",
     "clean-css": "^3.1.9"
   }
 }
